--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
     <aside id="aside">
         <img src="./assets/close.svg" id="close" alt="">
-        <a href="#">Home</a>
-        <a href="#">Contact</a>
-        <a href="#">Service</a>
+
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Contact</a>
+            <a href="#">Service</a>
+        </nav>
     </aside>
 
     <script src="./js/index.js"></script>
